syntax = "proto3";

import "svg.proto";

package transport_catalogue_serialize;

message RenderSettings {
  double width = 1;
  double height = 2;
  double padding = 3;
  double line_width = 4;
  double stop_radius = 5;
  uint32 bus_label_font_size = 6;
  double bus_label_offset_dx = 7;
  double bus_label_offset_dy = 8;
  uint32 stop_label_font_size = 9;
  double stop_label_offset_dx = 10;
  double stop_label_offset_dy = 11;
  Color underlayer_color = 12;
  double underlayer_width = 13;
  ColorPalette color_palette = 14;
}