syntax = "proto3";

package transport_catalogue_serialize;

import "graph.proto";

message EdgeId { uint32 id = 1; }

message RouteInternalData {
  double weight = 1;
  EdgeId prev_edge = 2;
  bool is_exist = 3;
}

message RouteInternalDataList {
  repeated RouteInternalData route_internal_data = 1;
}

message RoutesInternalData {
  repeated RouteInternalDataList route_internal_data_list = 1;
}

message VertexInfo {
  uint32 stop_id = 1;
  uint32 vertex_id = 2;
}

message VertexInfoList { repeated VertexInfo vertex_info = 1; }

message Router {
  RoutesInternalData routes_internal_data = 1;
  Graph graph = 2;
  VertexInfoList vertex_info_list = 3;
}